Colaboratory を使用して作成しました

--- a/math_calc_ordinarydiff.ipynb
+++ b/math_calc_ordinarydiff.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "math_calc_ordinarydiff.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPPiXURB9tjcXooMn3oZKZO",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMEI252sGI1xxbiyFvoJEvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,6 +674,7 @@
         "id": "nIs3NheFct3X"
       },
       "source": [
+        "\n",
         "# いまここ"
       ]
     },
@@ -687,17 +689,18 @@
         "次に、非斉次1階線型微分方程式\n",
         "\n",
         "$$y'+ f(x)y = g(x) \\tag {1.1}$$\n",
-        "$$y'+ f(x)y = g(x) \\tag {1.1}$$\n",
         "\n",
+        "の解き方を考えてみよう。しかし今、我々にできる事は二つしかない。それは、斉次微分方程式を解くことと、各種式変形を行うことである。これを最大限駆使して解くしかない。具体的には、なんとかして(1.1)を斉次微分方程式\n",
         "\n",
+        "$$z'=\\nu(x)$$\n",
         "\n",
-        "の解き方を考えてみよう。しかし$x\\tag y$今、我々にできる事は二つしかない。それは、斉次微分方程式を解くことと、各種式変形を行うことである。これを最大限駆使して解くしかない。具体的には、なんとかして(1.1)を斉次微分方程式\n",
-        "\n",
-        "$$z'=\\nu(x)$$　　　　　★ の形に式変形して、これを解くのである。\n",
+        "の形に式変形して、これを解くのである。\n",
         "\n",
         "天下り式であるが、(1.1)にある関数$h(x)$をかけて\n",
         "\n",
-        "$$h(x)y' + h(x)f(x)y = h(x)g(x)$$　　　　(1.2) とする。ここで$h(x)$が\n",
+        "$$h(x)y' + h(x)f(x)y = h(x)g(x)\\tag {1.2}$$\n",
+        "\n",
+        "とする。ここで $h(x)$ が\n",
         "\n",
         "$$\\{h(x)y\\}'= h(x)y' + h(x)f(x)y$$　　　　(1.3)\n",
         "をみたすような関数であるとすると、$z=h(x)y,\\nu(x)=h(x)g(x)$とすれば★の形に変形できる。\n",
@@ -755,6 +758,7 @@
         "非斉次な微分方程式\n",
         "\n",
         "$$y' + f(x)y = g(x)$$\n",
+        "\n",
         "を解くのが最終的な目標であるが、ひとまず、右辺を$g(x)=0$とおいて、斉次な微分方程式\n",
         "\n",
         "$$y' + f(x)y = 0$$\n",
@@ -794,7 +798,7 @@
         "id": "PwTy_5Prcfa9"
       },
       "source": [
-        "#### 例題1\n",
+        "#### 例題 1\n",
         "\n",
         "微分方程式$y'-2xy=x$を解く。\n",
         "\n",
@@ -824,8 +828,18 @@
         "\n",
         "$$y = e^{x^2}\\left(-\\frac{1}{2}e^{-x^2} + C\\right) = -\\frac{1}{2} + Ce^{x^2}$$\n",
         "である。\n",
-        "\n",
-        "#### 例題2\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "35vYdzF94MpO"
+      },
+      "source": [
+        "#### 例題 2\n",
         "\n",
         "初期値問題$y'-2xy=x ; y(1)=2$を解く。\n",
         "\n",
@@ -841,7 +855,17 @@
         "$$y(x)=-{1\\over 2}+{5\\over 2}e^{x^2-1}$$\n",
         "\n",
         "あるいは、例題1で求めた一般解に$(x, y) = (1, 2)$を代入することによって*C*の値を求めてもよい。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-YVlxxCM4seX"
+      },
+      "source": [
         "### ベルヌーイの微分方程式\n",
         "\n",
         "1 階微分方程式のなかでも、特に\n",
@@ -867,7 +891,17 @@
         "y^{1-n} &= e^{-(1-n)\\int f(x)dx} \\left\\{(1-n)\\int g(x)e^{(1-n)\\int f(x)dx} dx + C\\right\\} \\\\\n",
         "      y &= e^{-\\int f(x)dx} \\left\\{(1-n)\\int g(x)e^{(1-n)\\int f(x)dx} dx + C\\right\\}^\\frac{1}{1-n}\n",
         "\\end{align}$$ を得る。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h1trPCqk4rMx"
+      },
+      "source": [
         "### リッカチの微分方程式\n",
         "\n",
         "1階微分方程式のなかでも、特に\n",
@@ -903,7 +937,17 @@
         "y = z + y_0 &= e^{\\int \\left\\{2f(x)y_0 + g(x)\\right\\}dx} \\left\\{-\\int f(x)e^{\\int \\left\\{2f(x)y_0 + g(x)\\right\\}dx} dx + C\\right\\}^{-1} + y_0 \\\\\n",
         "&= \\frac{e^{\\int \\left\\{2f(x)y_0 + g(x)\\right\\}dx}}{-\\int f(x)e^{\\int \\left\\{2f(x)y_0 + g(x)\\right\\}dx} dx + C} + y_0 \n",
         "\\end{align}$$ と求まる。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VqZhsy0O4pu4"
+      },
+      "source": [
         "### 演習\n",
         "\n",
         "次の方程式を解け\n",
@@ -940,7 +984,17 @@
         "\n",
         "と解ける。適当に文字を置き換えると、[高等学校理科 物理II\n",
         "原子と原子核の](高等学校理科_物理II_原子と原子核 \"wikilink\")1.2.3で述べた式が導かれたことになる。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BsV5Ti_l4nqg"
+      },
+      "source": [
         "一階定数係数連立線型常微分方程式と高階定数係数線型常微分方程式\n",
         "--------------------------------------------------------------\n",
         "\n",
@@ -1069,7 +1123,17 @@
         "&=e^{\\lambda x}\\sum_{k=0}^\\infty \\frac{x^k(A-\\lambda I)^k}{k!} \\\\\n",
         "&=e^{\\lambda x}\\sum_{k=0}^{n-1} \\frac{x^k(A-\\lambda I)^k}{k!} \\\\\n",
         "\\end{align}$$ と有限回の計算で指数関数を計算することができる。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u1rZccHj4jKA"
+      },
+      "source": [
         "### 具体例\n",
         "\n",
         "二階の線型常微分方程式の具体例として、ばねにつながれた物体の運動を記述してみよう。ばねにつながれた物体の時刻 $x$ における変位を $y$ とする。このとき、ばねから物体が受ける力は（負の比例定数で）変位に比例することが知られている。このことを用いて物体の運動方程式を記述すると、\n",
@@ -1116,7 +1180,17 @@
         "\n",
         "$$y(x)=y_0+\\int_{x_0}^x f(t,y(t)) dt$$...(\\*)\\'\n",
         "を満たすことと同値であることも注意しておく。2変数関数$f(x,y)$に対していくつかの仮定を課したときに、この方程式の解がどのように構成されるかを見ていく。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SfTIofgh4hSV"
+      },
+      "source": [
         "### 冪級数による解法\n",
         "\n",
         "本節では、*f*が次の仮定(H1)を満たすとする。\n",
@@ -1189,7 +1263,17 @@
         "\n",
         "（定理5.1.1'の証明）\n",
         "補題5.1.3,5.1.4,5.1.5より、補題5.1.2の冪級数は収束する優級数をもち、したがって自身も収束する。よって、この冪級数の極限として、解が一意的に存在することがわかる。//\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dmsx5hbO4eNg"
+      },
+      "source": [
         "### ピカールの逐次近似法\n",
         "\n",
         "本節では、*f*が次の仮定(H2)を満たすとする。\n",
@@ -1259,7 +1343,17 @@
         "\n",
         "$$\\lim_{j \\to \\infty}y_j(x)=y_0+\\int_{x_0}^x f(t,\\lim_{j \\to \\infty}y_j(t)) dx$$\n",
         "である。これは$\\lim_{j \\to \\infty}y_j(x)$が(\\*)\\'の解であることを示している。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k4h7xUEJ4ajw"
+      },
+      "source": [
         "### コーシーの折れ線とペアノの定理\n",
         "\n",
         "本節では、*f*が次の仮定(H3)を満たすとする。\n",
@@ -1305,7 +1399,17 @@
         "\n",
         "$$|A_{j_l}| < \\varepsilon+(i+1)\\int_{x_d}^{x_{d+1}} \\varepsilon'=\\varepsilon+\\frac{(i+1)r\\varepsilon'}{j_l}$$\n",
         "である。$\\varepsilon,\\varepsilon'$は任意なので、$A_{j_l}=0$である。\n",
-        "\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZcBz15Rv4Vcr"
+      },
+      "source": [
         "陰関数型の1階常微分方程式\n",
         "-------------------------\n",
         "\n",
@@ -1377,8 +1481,18 @@
         "$k + \\ell x + my =\\phi (t)$ と上式\n",
         "$x = \\int \\left\\{ \\frac{1}{\\;\\ell+m\\psi(t)\\;} \\cdot \\frac{d \\phi (t)}{dt} \\right\\} dt+C$\n",
         "により $t$ の関数として与えられる。なお $C$ は積分定数である。\n",
-        "\n",
-        "#### 例題1\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TWhcv9mA4SoQ"
+      },
+      "source": [
+        "#### 例題 1\n",
         "\n",
         "陰関数型の関数 $F$ が、\n",
         "$F \\bigl( \\phi (t),\\; \\psi (t) \\bigr) = \\phi (t) - \\psi (t) = 0$\n",
@@ -1397,8 +1511,18 @@
         "から、一般解を求めよ。 解きかたは、$\\psi (t)=\\phi (t)$ の関係を\n",
         "$x = \\! \\int \\! \\left\\{ \\frac{1}{\\; \\ell + m \\psi (t)\\;} \\cdot \\frac{\\; d \\phi (t) \\;}{dt} \\; \\right\\} dt+C$\n",
         "に適用すればよい。\n",
-        "\n",
-        "#### 例題2\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h6_c-uwA4PZH"
+      },
+      "source": [
+        "#### 例題 2\n",
         "\n",
         "陰関数型の関数 $F$ が、\n",
         "$F \\bigl( \\phi (t), \\; \\psi (t) \\bigr) = \\phi (t) - \\psi (t) = 0$\n",
