Colaboratory を使用して作成しました

--- a/diary.ipynb
+++ b/diary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "diary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWEOTXMD4JPlMh9tmhRFDn",
+      "authorship_tag": "ABX9TyNCAm9OvAIntvg2jB/tIGUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,9 @@
       "source": [
         "2021/04/30 20:38\n",
         "\n",
-        "github に書く diary の云々。\n",
+        "github に書く diary。 メモ代わりには使えるだろう。\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": null,
