Colaboratory を使用して作成しました

--- a/diary.ipynb
+++ b/diary.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "diary.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwRCMpz5NghgwbafIkd5u0",
+      "authorship_tag": "ABX9TyNzz8vAoOXNzuTSjemMyA9N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,8 @@
         "6. コードセルでは ubuntu (linux) の機能が使える\n",
         "7. テキストセルでは latex が使えて表現が豊富になる\n",
         "8. github にセーブできる (もっとも安全なサーバー)\n",
+        "9. git clone して grep とか ubuntu (linux) の機能がつかえて超便利\n",
+        "\n",
         "\n",
         "思いつき。アイデア。\n",
         "\n",
