Colaboratory を使用して作成しました

--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -51,11 +51,11 @@
         "\n",
         "という github 上の jupyter で 3 年前に書かれている本の第2章が\n",
         "\n",
-        "Symbolic mathematics with Sympy\n",
+        "Symbolic mathematics with Sympy (Sympy による数式処理)\n",
         "\n",
-        "Sympy による数式処理\n",
+        "と言う章になっている。\n",
         "\n",
-        "と言う章になっている。\n"
+        "これを読む。\n"
       ]
     },
     {
