--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -77,7 +77,7 @@
         "\n",
         "* 数式を扱う\n",
         "* 数式を解く\n",
-        "* 数式の微積分する\n",
+        "* 数式を微積分する\n",
         "* 数式をグラフにする\n",
         "\n",
         "ほかにもいろいろできることがある。 sympy のホームページを参照。\n",
@@ -349,7 +349,7 @@
         "display(expr == expr2)\n",
         "display(expr == expand(expr))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -438,7 +438,9 @@
         "id": "iB0Y-I_I9BxM"
       },
       "source": [
-        "上の実験からわかることは数式の形が違うと `==` は真にはならない。"
+        "上の実験からわかることは数式の形が違うと `==` は真にはならない。\n",
+        "\n",
+        "値が入れば、当然 `==` が真になる。"
       ]
     },
     {
@@ -454,11 +456,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "e8yRwMyroWKH",
-        "outputId": "0fc27526-6914-4435-9f13-fee13f26e672",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "0fc27526-6914-4435-9f13-fee13f26e672"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -466,7 +468,7 @@
         "expr = (a + b) ** 2 \n",
         "latex(expand(expr))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,15 +503,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "UaoPlbohDKsM"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EWoNlNNpoWKH"
       },
       "source": [
         "---\n",
-        "**練習問題E** Use Sympy to verify the following expressions:\n",
+        "**練習問題** $\\quad$ sympy を使って下記の等式を確認する。\n",
         "\n",
-        "- $(a - b) ^ 2 = a ^ 2 - 2 a b + b^2$\n",
-        "- $a ^ 2 - b ^ 2 = (a - b) (a + b)$ (instead of using `expand`, try `factor`)"
+        "* $(a - b) ^ 2 = a ^ 2 - 2 a b + b^2$\n",
+        "* $a ^ 2 - b ^ 2 = (a - b) (a + b)\\quad$ (`expand` ではなく `factor` を使ってみる)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "znruhx51DngS"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -538,7 +560,7 @@
       },
       "source": [
         "# We only really need to define `c` but doing them all again.\n",
-        "a, b, c, x = sym.symbols('a, b, c, x')  "
+        "a, b, c, x = symbols('a, b, c, x')  "
       ],
       "execution_count": null,
       "outputs": []
@@ -559,7 +581,7 @@
         "outputId": "0e8f8524-502a-4ce7-bb01-fbe46cd6f81e"
       },
       "source": [
-        "sym.solveset(a * x ** 2 + b * x + c, x)"
+        "solveset(a * x ** 2 + b * x + c, x)"
       ],
       "execution_count": null,
       "outputs": [
@@ -615,7 +637,7 @@
         "outputId": "e1c6b4f7-b738-4aaf-c28b-1e89ecc9f2eb"
       },
       "source": [
-        "sym.solveset(x ** 2 + 1, x, domain=sym.S.Reals)"
+        "solveset(x ** 2 + 1, x, domain=S.Reals)"
       ],
       "execution_count": null,
       "outputs": [
@@ -670,7 +692,7 @@
         "outputId": "87e870c2-ed86-4291-a83c-3031457bb4c6"
       },
       "source": [
-        "sym.limit(1/x, x, 0, dir=\"+\")"
+        "limit(1/x, x, 0, dir=\"+\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -723,7 +745,7 @@
         "outputId": "34cf8798-0f43-49d8-8d49-a6036d29a8d4"
       },
       "source": [
-        "sym.diff(x ** 2 - sym.cos(x), x)"
+        "diff(x ** 2 - cos(x), x)"
       ],
       "execution_count": null,
       "outputs": [
@@ -759,7 +781,7 @@
         "outputId": "5dc1b313-22a4-4354-9c06-f08ce8806760"
       },
       "source": [
-        "sym.integrate(x ** 2 - sym.cos(x), x)"
+        "integrate(x ** 2 - cos(x), x)"
       ],
       "execution_count": null,
       "outputs": [
@@ -798,7 +820,7 @@
         "outputId": "15ce36a8-cfc9-42a3-fb50-2e9e4a5828c5"
       },
       "source": [
-        "sym.integrate(x ** 2 - sym.cos(x), (x, 0, 5))"
+        "integrate(x ** 2 - cos(x), (x, 0, 5))"
       ],
       "execution_count": null,
       "outputs": [
@@ -878,7 +900,7 @@
       },
       "source": [
         "expr = x ** 2\n",
-        "p = sym.plot(expr);"
+        "p = plot(expr);"
       ],
       "execution_count": null,
       "outputs": [
