Colaboratory を使用して作成しました

--- a/matplotlibtutorials.ipynb
+++ b/matplotlibtutorials.ipynb
@@ -581,10 +581,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 485
         },
         "id": "YNn7Tmb8fbx3",
-        "outputId": "05196e07-4424-4bc0-ac9c-82e6b39be53f"
+        "outputId": "1d351ce8-5abd-4be6-e366-94b27615e31c"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -599,19 +599,18 @@
         "ax.set_title(\"Simple Plot\")  # グラフにタイトルをつける\n",
         "ax.legend()  # レジェンドを加える"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.legend.Legend at 0x7fe54a61ce10>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-ad410496cd5e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_title\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Simple Plot\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# グラフにタイトルをつける\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# レジェンドを加える\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Figure' object has no attribute 'plot'"
+          ]
         },
         {
           "output_type": "display_data",
@@ -2171,10 +2170,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ODEEP_BmUcKU",
-        "outputId": "c20e78c3-29c4-4c38-e4c4-7f328fb7ce14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c20e78c3-29c4-4c38-e4c4-7f328fb7ce14"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -2184,7 +2183,7 @@
         "print(type(data))\n",
         "print(data)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
