Colaboratory を使用して作成しました

--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -1619,15 +1619,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jVOR3lu4_RxJ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "rHoI150KZl8L"
       },
       "source": [
@@ -1636,6 +1627,15 @@
         "そういうことなのだろう。\n",
         "\n",
         "&nbsp;\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jVOR3lu4_RxJ"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -1687,12 +1687,21 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "TvUYXs0fGBfH"
+        "id": "OfUpWfD-GhTe"
       },
       "source": [
-        "っっｌ"
+        "同じグラフを numpy+matplotlib で描く。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YHag0vFlGltu"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
