Colaboratory を使用して作成しました

--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -903,7 +903,8 @@
         "id": "mKSgY_wnoWKJ"
       },
       "source": [
-        "# 微分積分方程式 symbolic calculus\n",
+        "# 微分積分方程式 \n",
+        "symbolic calculus\n",
         "\n",
         "sympy で極限 limit を扱うことができる。\n",
         "\n",
