Colaboratory を使用して作成しました

--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -5,27 +5,17 @@
     "anaconda-cloud": {},
     "celltoolbar": "Tags",
     "kernelspec": {
-      "display_name": "Python [conda env:mwp]",
-      "language": "python",
-      "name": "conda-env-mwp-py"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.0"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "colab": {
       "name": "math_sympy.ipynb",
       "provenance": [],
       "toc_visible": true,
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
     }
   },
   "cells": [
@@ -1665,7 +1655,7 @@
         "expr = x + cos(x)\n",
         "p = plot(expr)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1695,11 +1685,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "YHag0vFlGltu",
-        "outputId": "f7769421-5030-46f1-ec80-0039feb6b7f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 251
-        }
+        },
+        "outputId": "f7769421-5030-46f1-ec80-0039feb6b7f4"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1715,7 +1705,7 @@
         "ax.plot(x, x + np.cos(x))  # cos は numpy の cos を使うので注意\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1736,11 +1726,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "OwqNqzNsXZ8B",
-        "outputId": "d6e897e7-64de-433f-c808-6f4a9b289f8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "d6e897e7-64de-433f-c808-6f4a9b289f8e"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -1748,7 +1738,7 @@
         "expr = x**2 - exp(x)\n",
         "p = plot(expr, xlim=(-1,10))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1778,11 +1768,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "R04F3olGYB7O",
-        "outputId": "86c2cee4-adb6-4b72-fdf4-f478b25944dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
-        }
+        },
+        "outputId": "86c2cee4-adb6-4b72-fdf4-f478b25944dc"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1798,7 +1788,7 @@
         "ax.plot(x, x**2 - np.exp(x))  # exp は numpy の exp を使うので注意\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1814,6 +1804,34 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YGDWyud7n5hE"
+      },
+      "source": [
+        "# ここから\n",
+        "\n",
+        "とてもコンパクトな Sympy 導入だと思う。\n",
+        "\n",
+        "ここから先は Sympy のホームーページの Tutorial をやるのがよいだろう。\n",
+        "\n",
+        "もしくは、数学のテキストで Sympy を用いているのを探してやるのがいいと思う。\n",
+        "\n",
+        "とか。 例示が必要だね!!!!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ODz7hEZpn5Vs"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
