--- a/math_sympy_short.ipynb
+++ b/math_sympy_short.ipynb
@@ -6,7 +6,7 @@
       "name": "math_sympy_short.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtFqaO1BlP5kD6k2fvIrjl",
+      "authorship_tag": "ABX9TyM+r9DnpOnKPw6/AxjzxKys",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,17 +29,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xAUvLUWoc71h"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "pLsN9zM3uNQQ"
@@ -47,15 +36,11 @@
       "source": [
         "# メモ\n",
         "\n",
-        "https://github.com/drvinceknight/Python-Mathematics-Handbook\n",
+        "数学を学ぶためになんらかの数式処理システムは必須だろう。\n",
         "\n",
-        "という github 上の jupyter で 3 年前に書かれている本の第2章が\n",
+        "この Colab のノートブックは Sympy という数式処理システムについての学習資料である。\n",
         "\n",
-        "Symbolic mathematics with Sympy (Sympy による数式処理)\n",
-        "\n",
-        "と言う章になっている。\n",
-        "\n",
-        "これを読む。\n"
+        "Colab で開き、メニューの「ドライブにコピー」で自分の環境にコピーして、セルを編集・実行しながら読むことを想定している。 自由に壊しながら学んで欲しい。"
       ]
     },
     {
@@ -64,9 +49,7 @@
         "id": "1E47ZoekoWJ8"
       },
       "source": [
-        "# Sympy による数式処理 \n",
-        "\n",
-        "Symbolic Mathematics with Sympy\n"
+        "# Sympy による数式処理 \n"
       ]
     },
     {
@@ -82,7 +65,7 @@
         "* 数式を微積分する\n",
         "* 数式をグラフにする\n",
         "\n",
-        "ほかにもいろいろできることがある。 sympy のホームページを参照。\n",
+        "ほかにもいろいろできることがある。 sympy のホームページ (sympy.org) には tutorial もある。\n",
         "\n",
         "&nbsp;\n",
         "\n"
@@ -104,13 +87,20 @@
         "\n",
         "x に値を入れなくても x - x == 0 という演算が可能。\n",
         "\n",
+        "次のコードセルを実行する。\n",
+        "\n",
         "&nbsp;\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HfEx6vxKSGpP"
+        "id": "HfEx6vxKSGpP",
+        "outputId": "63d150ec-f73d-4c8e-b0ee-8abfca1693f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 76
+        }
       },
       "source": [
         "# sympy を使うための準備\n",
@@ -120,8 +110,44 @@
         "display(x - x == 0)\n",
         "display(x - x)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle x$",
+            "text/plain": [
+              "x"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 0$",
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -140,7 +166,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MX67Kzy-oWKF"
+        "id": "MX67Kzy-oWKF",
+        "outputId": "1395f009-2504-4861-98dd-2d03bf6f188e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
       },
       "source": [
         "from sympy.abc import *\n",
@@ -148,8 +179,21 @@
         "expr = (a + b) ** 2 \n",
         "display(expr)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + b\\right)^{2}$",
+            "text/plain": [
+              "(a + b)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,14 +207,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WNrzt62boWKF"
+        "id": "WNrzt62boWKF",
+        "outputId": "605aead0-7895-4d6e-9a76-464665b222db",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
       },
       "source": [
         "expr2 = a**2+2*a*b+b**2\n",
         "display(expr2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} + 2 a b + b^{2}$",
+            "text/plain": [
+              "a**2 + 2*a*b + b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -184,24 +246,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xo_jccQgoWKG"
+        "id": "Xo_jccQgoWKG",
+        "outputId": "fc4d7db2-c2df-4e28-e03a-d0105de4aad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
       },
       "source": [
         "display(expand(expr))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} + 2 a b + b^{2}$",
+            "text/plain": [
+              "a**2 + 2*a*b + b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l61YLF2aoWKG"
+        "id": "l61YLF2aoWKG",
+        "outputId": "9996fa4d-5d74-4f6b-f116-ba0b49cbf0d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
       },
       "source": [
         "display(factor(expr2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + b\\right)^{2}$",
+            "text/plain": [
+              "(a + b)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -215,7 +313,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zDmDha9CiQwP"
+        "id": "zDmDha9CiQwP",
+        "outputId": "7d038768-bea7-4efb-febe-4ce411283037",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 149
+        }
       },
       "source": [
         "# 実験\n",
@@ -225,17 +328,97 @@
         "expr2 = a**2+2*a*b+b**2\n",
         "display(expr)\n",
         "display(expr2)\n",
-        "display(expr == expr)\n",
-        "display(expr == expr2)\n",
+        "display(expr == expr) # 自分自身とは同等\n",
+        "display(expr == expr2) # 式の形が違えば同等ではない False\n",
         "display(expr == expand(expr))\n",
-        "a=2;b=3\n",
+        "a=2;b=3 # 変数に値をだいにゅうしてから式を定義してみる\n",
         "expr = (a + b) ** 2 \n",
         "expr2 = a**2+2*a*b+b**2\n",
-        "display(expr == expr2)\n",
+        "display(expr == expr2) # 今度は同等になった\n",
         "display(expr == expand(expr))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a + b\\right)^{2}$",
+            "text/plain": [
+              "(a + b)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} + 2 a b + b^{2}$",
+            "text/plain": [
+              "a**2 + 2*a*b + b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -292,7 +475,7 @@
         "id": "EWoNlNNpoWKH"
       },
       "source": [
-        "---\n",
+        "\n",
         "**練習問題** $\\quad$ sympy を使って下記の等式を確認する。\n",
         "\n",
         "* $(a - b) ^ 2 = a ^ 2 - 2 a b + b^2$\n",
@@ -382,7 +565,7 @@
         "id": "lDM_kKTPoWKI"
       },
       "source": [
-        "---\n",
+        "\n",
         "**練習問題** $\\quad$ sympy を使って 3 次方程式の一般解を求める。\n",
         "\n",
         "$$a x ^ 3 + b x ^ 2 + c  x + d = 0$$\n",
@@ -450,7 +633,7 @@
         "id": "Opn_LhkdoWKJ"
       },
       "source": [
-        "---\n",
+        "\n",
         "**練習問題** $\\quad$ sympy を使って次の方程式を解く\n",
         "\n",
         "* $x ^ 2 = 2$ $\\quad (x \\in \\mathbb{N})$\n",
@@ -528,7 +711,7 @@
         "id": "F8qFzaAOoWKK"
       },
       "source": [
-        "---\n",
+        "\n",
         "**練習問題** $\\quad$ 次の極限を計算する。\n",
         "\n",
         "1. $\\displaystyle \\lim_{x\\to 0^-}\\frac{1}{x}$\n",
@@ -649,7 +832,7 @@
         "id": "yydO1m2ioWKL"
       },
       "source": [
-        "---\n",
+        "\n",
         "\n",
         "**練習問題** $\\quad$ sympy を使って下記の式を計算する。\n",
         "\n",
@@ -878,7 +1061,7 @@
         "id": "MUF7p-y1oWKO"
       },
       "source": [
-        "---\n",
+        "\n",
         "**練習問題** $\\quad$ 次の関数をグラフ描画する。\n",
         "\n",
         "* $y=x + cos(x)$\n",
