--- a/math_sympy_short.ipynb
+++ b/math_sympy_short.ipynb
@@ -6,7 +6,7 @@
       "name": "math_sympy_short.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5wP6VLpWS6/SLHp0T2YwO",
+      "authorship_tag": "ABX9TyMO/8ql9weahMYLfFRSL5Uk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,7 +85,7 @@
         "\n",
         "print の代わりに display を使うと latex で表示してくれる。 数学においてシンボルは大切。\n",
         "\n",
-        "x に値を入れなくても x - x == 0 という演算が可能。\n",
+        "x に値を入れなくても x - x == 0 を評価して真を返すという演算ができる。\n",
         "\n",
         "次のコードセルを実行する。\n",
         "\n",
@@ -485,7 +485,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "znruhx51DngS"
+        "id": "znruhx51DngS",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 61
+        },
+        "outputId": "4574b841-d1e9-4187-8dc0-04e4445e0972"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -494,13 +499,43 @@
         "display(expr)\n",
         "display(expand(expr))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a - b\\right)^{2}$",
+            "text/plain": [
+              "(a - b)**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} - 2 a b + b^{2}$",
+            "text/plain": [
+              "a**2 - 2*a*b + b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EDs99u1uHTOA"
+        "id": "EDs99u1uHTOA",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 60
+        },
+        "outputId": "c570e1d2-80f9-4026-c978-bbbd91c52429"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -509,8 +544,33 @@
         "display(expr)\n",
         "display(factor(expr))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle a^{2} - b^{2}$",
+            "text/plain": [
+              "a**2 - b**2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(a - b\\right) \\left(a + b\\right)$",
+            "text/plain": [
+              "(a - b)*(a + b)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -537,7 +597,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0XtZaMOKoWKI"
+        "id": "0XtZaMOKoWKI",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "a6460e99-2d9b-417a-f778-08c814b333f8"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -545,8 +610,21 @@
         "expr = a * x ** 2 + b * x + c\n",
         "display(solveset(expr,x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\left\\{- \\frac{b}{2 a} - \\frac{\\sqrt{- 4 a c + b^{2}}}{2 a}, - \\frac{b}{2 a} + \\frac{\\sqrt{- 4 a c + b^{2}}}{2 a}\\right\\}$",
+            "text/plain": [
+              "FiniteSet(-b/(2*a) - sqrt(-4*a*c + b**2)/(2*a), -b/(2*a) + sqrt(-4*a*c + b**2)/(2*a))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -555,6 +633,8 @@
       },
       "source": [
         "sympy の `solveset` は引数を 2 つ取り、第 1 引数は数式で、第 2 引数は解く対象となる変数を指定する。\n",
+        "\n",
+        "返り値は解の集合 set であり、解がない場合は空集合が返される。\n",
         "\n",
         "&nbsp;\n"
       ]
@@ -606,13 +686,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DerbvXwSoWKJ"
+        "id": "DerbvXwSoWKJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "outputId": "74f7d3bb-66d5-414a-8bfe-d0df9dd37007"
       },
       "source": [
         "solveset(x ** 2 + 1, x, domain=S.Reals)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\emptyset$",
+            "text/plain": [
+              "EmptySet"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -680,7 +779,6 @@
       },
       "source": [
         "# 微分積分方程式 \n",
-        "symbolic calculus\n",
         "\n",
         "sympy で極限 limit を扱うことができる。\n",
         "\n",
@@ -755,13 +853,20 @@
         "id": "0af8x9wgBxcZ"
       },
       "source": [
-        "微分方程式は `Derivative` 、微分計算は `diff`"
+        "微分方程式は `Derivative` 、微分計算は `diff`\n",
+        "\n",
+        "sympy で大文字で始まる関数は数式表示のためのもので、小文字で始まる関数が数式を計算するもの。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EgP0jrzioWKK"
+        "id": "EgP0jrzioWKK",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "outputId": "59d23987-ec2b-4e3f-ad68-bf9d27dec7a5"
       },
       "source": [
         "from sympy.abc import *\n",
@@ -772,8 +877,57 @@
         "display(diff(x ** 2 - cos(x), x))\n",
         "display(diff(expr, x))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{d}{d x} \\left(x^{2} - \\cos{\\left(x \\right)}\\right)$",
+            "text/plain": [
+              "Derivative(x**2 - cos(x), x)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{d}{d x} \\left(x^{2} - \\cos{\\left(x \\right)}\\right)$",
+            "text/plain": [
+              "Derivative(x**2 - cos(x), x)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 2 x + \\sin{\\left(x \\right)}$",
+            "text/plain": [
+              "2*x + sin(x)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "$\\displaystyle 2 x + \\sin{\\left(x \\right)}$",
+            "text/plain": [
+              "2*x + sin(x)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -916,11 +1070,11 @@
         "\n",
         "メモ $\\quad$ ここで注意。 sympy で簡易に例えば $y=x^2$ のグラフが描けるが、グラフは本来座標の範囲を決めたり、ゼロをどこに置くか、目盛りをどうするかなど面倒な設定が必要なところを裏で処理している。 \n",
         "\n",
-        "裏で動いているのが matplotlib (http://matplotlib.org/)という python のライブラリーだが、これも簡易な使い方と細かく設定して使う方法がある。\n",
+        "裏で動いているのが matplotlib (http://matplotlib.org/) という python のライブラリーだが、これも簡易な使い方と細かく設定して使う方法がある。\n",
         "\n",
         "sympy でグラフ描画する際には matplotlib のどの機能を使っているとか、意識しながら使うのがよいと思う。\n",
         "\n",
-        "numpy と matplotlib を明示的に使う\n",
+        "sympy による描画と、numpy と matplotlib を明示的に使うことによる描画を両方学ぶ。\n",
         "\n",
         "&nbsp;\n"
       ]
@@ -931,7 +1085,7 @@
         "id": "jmZUIB1_oWKN"
       },
       "source": [
-        "$x^2$ のグラフを描く"
+        "sympy で $x^2$ のグラフを描く"
       ]
     },
     {
@@ -981,79 +1135,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vsrLJa-IS02Y"
-      },
-      "source": [
-        "メモ $\\quad$ xlabel や ylabel の位置はどうやって指示するのか。 \n",
-        "\n",
-        "座標の位置を変えるために spines を設定するのは手間が多い。 "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7EmWkXY5oWKO"
-      },
-      "source": [
-        "テキストには pdf で保存する方法が書いてある。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "tags": [
-          "nbval-ignore-output"
-        ],
-        "id": "XLas0YmPoWKO"
-      },
-      "source": [
-        "p.save(\"x_squared.pdf\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Mv13T7X7VW3R"
-      },
-      "source": [
-        "メモ $\\quad$ `p.save(\"x_squared.pdf\")` で pdf を作ると同時に画面上に描画をしている。 \n",
-        "\n",
-        "numpy+matplotlib の `plt.savefig(\"temp.svg\", format=\"svg\")` も同じだった!!!!\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZzNp1r5dU4OG"
-      },
-      "source": [
-        "print(type(p) )\n",
-        "print(type(ax))\n",
-        "print(len(dir(p)))\n",
-        "print(len(dir(ax)))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rHoI150KZl8L"
-      },
-      "source": [
-        "上の p と ax の dir を取ってみると圧倒的に ax の方が機能が多い。\n",
-        "\n",
-        "そういうことなのだろう。\n",
-        "\n",
-        "&nbsp;\n"
-      ]
     },
     {
       "cell_type": "markdown",
