--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -58,13 +58,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "n4AlkFTthXEu"
+      },
+      "source": [
+        "# マークダウンとマークダウン中の latex と %%latex が混乱している!!!!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "M_IYHSO3fN5l"
       },
       "source": [
         "# メモ\n",
         "colab で latex を勉強する。\n",
         "\n",
-        "Colab で latex を書くには 3 通りある。\n",
+        "colabで latex を書くには 3 通りある。\n",
         "\n",
         "1. テキストセル内でマークダウンで &dollar; マークを使って書く\n",
         "2. コードセル内で `%%latex` マジックを使って書く\n",
@@ -132,13 +141,55 @@
         "x = 3\n",
         "$$\n",
         "\n",
-        "とか。\n",
+        "とか。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ENrYHoYLWZmG"
+      },
+      "source": [
+        "テキストセルでは数式を &dollar; マークで囲むとインライン、&dollar;&dollar; で囲むと段落を変えて表示する。\n",
         "\n",
-        "これは \\\\$ マークで囲むとインライン、\\\\$\\\\$ で囲むと段落を変えて、センタリングして表示する。\n",
+        "表示された数式の latex での表記はセルを編集モードにすると見ることができる。\n",
         "\n",
-        "これは &dollar; マークで囲むとインライン、&dollar;&dollar; で囲むと段落を変えて、センタリングして表示する。\n",
-        "\n",
-        "&nbsp;\n"
+        "編集モードにするにはセルを選択してダブルクリックするか Enter キーを押す。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wOsNxaXaXPUy",
+        "outputId": "d33a343f-27a7-4d39-a676-95d84d30f2cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "source": [
+        "# コードセルで %%latex で表示する\n",
+        "# 編集モードにしなくても latex 表記ができるので latex の学習には便利\n",
+        "# コードセルを実行しないと数式表記にならない。\n",
+        "# コードセルの実行はセルの左の実行ボタン(右向き三角)を押すか、Ctrl+Enter を押す。\n",
+        "%%latex\n",
+        "x = 3"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "x = 3",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -208,7 +259,7 @@
         "1. % 記号はコメント記号なので文法上は許されるが、% 記号以降が出力されないのでバックスラッシュ \\ でエスケープする必要がある。\n",
         "1. バックスラッシュ \\ 自体は \\backslash と書く。 波記号 チルダ tilde ~ は \\tilde{}、キャレット、ハット記号、サーカムフレックス、circumflex ^ は \\hat{} になる。\n",
         "1. 地の文、テキストも数式として解釈されるので、英文字はフォントが変わる。普通の文字にしたい場合は \\text{} で括る。\n",
-        "1. 改行はマークダウンではスペース2個だが、%%latex では バックスラッシュ \\ を2個 \\\\\\\\ になる。\n",
+        "1. 改行はマークダウンではスペース 2 個だが、%%latex では バックスラッシュ \\ を2個 \\\\\\\\ になる。\n",
         "1. その他マークダウン上の便利な機能。箇条書きの自動ナンバリングなどは使えない。\n"
       ]
     },
@@ -313,13 +364,17 @@
         "id": "VQ5cdQKxB0lO"
       },
       "source": [
-        "マークダウンでドルマークで囲むと latex(mathjax) になる。 2個のドルマークで囲むと行替えされ、センタリングされた数式になる。\n",
+        "マークダウンでドルマークで囲むと latex(mathjax) になる。 2 個のドルマークで囲むと行替えされ、センタリングされた数式になる。\n",
         "\n",
         "$$ E=mc^2$$\n",
         "\n",
-        "ここで $c$ は光速をあらわし、値は次の通り。  \n",
+        "ここで $c$ は光速を表し、値は次の通り。  \n",
         "\n",
-        "$$ c = 299{,}792{,}458 \\, \\mathrm{m/s} $$"
+        "$$ c = 299{,}792{,}458 \\, \\mathrm{m/s} $$\n",
+        "\n",
+        "いわゆる光速は 30 万キロ/秒というやつね!!!!\n",
+        "\n",
+        "地球 7 周り半。\n"
       ]
     },
     {
@@ -359,7 +414,7 @@
         "id": "7JZQs8Ize_jf"
       },
       "source": [
-        "数字のカンマは `{,}` として入れる。\n"
+        "数字のカンマは `{,}` として入れる。 波括弧 brace で囲む。\n"
       ]
     },
     {
@@ -372,7 +427,7 @@
         "\n",
         "マークダウンでインラインでなく、数式として入れた場合、同じ数式を次のコードセルで %%latex として入れる。\n",
         "\n",
-        "そうすることにより、数式の意味が明示的になり、さらに sympy などのプログラミングにつながる。"
+        "そうすることにより、数式の latex 表記が明示的になり学習に貢献する。"
       ]
     },
     {
@@ -383,21 +438,36 @@
       "source": [
         "# ドル`$`マーク ドルサインをエスケープするには\n",
         "\n",
-        "この本は\\$35.40。\n",
+        "この本は\\$35.40。とか。\n",
         "\n",
         "ドルサインは latex (mathjax) 対応のマークダウンでは mathjax の begin, end の記号なので、エスケープする必要がある。\n",
-        "Colab 環境ではバックスラッシュ `\\` でエスケープできるが、それでは他の環境との互換性がなくなる。\n",
         "\n",
-        "つまり、`$`サインは dallar sign は escape できない!!!!\n",
+        "colab 環境ではバックスラッシュ `\\` でエスケープできるが、それでは他の環境との互換性がなくなる。\n",
         "\n",
-        "ドルサイン自体をコードで書くしか方法はないと思わる。\n",
+        "つまり、`$`サインは dallar sign は互換性のある方法でエスケープするのはむずかしい!!!!\n",
         "\n",
-        "&#0024;\n",
+        "ドルサイン自体をコードで書いておくのが現状ではいちばん互換性があると思う。\n",
+        "\n",
         "&#36;\n",
+        "\n",
         "&#x24;\n",
+        "\n",
         "&dollar;\n",
         "\n",
-        "この本は&dollar;35.40、とかね。\n"
+        "HTML文字参照と言うらしい。 \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5Bj1HdA_dkGx"
+      },
+      "source": [
+        "同一セル内でペアになっていないと表示される。\n",
+        "\n",
+        "$\n",
+        "\n",
+        "$$"
       ]
     },
     {
@@ -415,26 +485,28 @@
         "id": "s98H-qzjKkTo",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 143
+          "height": 146
         },
-        "outputId": "0049d49a-8bf1-4bea-bceb-382018671831"
+        "outputId": "97c0747e-d6cc-479f-e2ea-f1143372852e"
       },
       "source": [
         "# 水平方向の空白の実験\n",
+        "# \\+セミコロン、スペース、チルダが標準的な 1 文字スペースのようである\n",
+        "# とりあえずセミコロンがわかりやすいので \\; とする\n",
         "%%latex\n",
         "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\n",
-        "a~b~c~d~e~f~g~ tilde\\\\\n",
-        "a~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\n",
         "a\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\n",
+        "a~b~c~d~e~f~g~ tilde\\\\\n",
         "a\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\n",
+        "a~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\n",
         "a\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "a\\;b\\;c\\;d\\;e\\;f\\;g\\; セミコロン\\\\\na~b~c~d~e~f~g~ tilde\\\\\na~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\na\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\na\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\na\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\",
+            "text/latex": "a\\;b\\;c\\;d\\;;e\\;f\\;g\\; セミコロン\\\\\na\\ b\\ c\\ d\\ e\\ f\\ g\\  スペース\\\\\na~b~c~d~e~f~g~ tilde\\\\\na\\,b\\,c\\,d\\,e\\,f\\,g\\, カンマ\\\\\na~~b~~c~~d~~e~~f~~g~~ tilde2\\\\\na\\quad b\\quad c\\quad d\\quad e\\quad f\\quad g\\quad  quad\\\\",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -460,14 +532,25 @@
         "id": "D07ckSl95vvl"
       },
       "source": [
-        "latex の中での改行は \\ を行末に2個入れる。  \n",
+        "latex の中での改行は改行 2 回で改行される。\n",
         "\n",
-        "空白行は \\\\ のあとに {1em} とか書く。  \n",
+        "改行なしの文は結合されて、1 つの文になる。\n",
+        "\n",
+        "文の中の改行 `<br>` 相等は `\\` を行末に2個入れる。  \n",
+        "\n",
+        "行間をあける (空白行を入れる) のを互換性のある方法で入れるのはけっこうむずかしい。\n",
+        "\n",
+        "たとえば \\\\ のあとに {1em} とか書く。  {3em}\n",
+        "\n",
         "\\{\\}+\\\\ で対応することもできる。\n",
         "\n",
         "`{}\\\\`\n",
         "\n",
-        "とか。"
+        "とか。\n",
+        "\n",
+        "&nbsp;\n",
+        "\n",
+        "とか"
       ]
     },
     {
@@ -478,22 +561,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 135
         },
-        "outputId": "d2398031-ed6f-40bc-8366-cd55d92e4788"
+        "outputId": "69b3a72d-e9c8-4ae6-91df-705144495f50"
       },
       "source": [
         "%%latex\n",
         "latex の中での改行は\\backslash を行末に2個入れる。\\\\[1em]\n",
-        "空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\\n",
+        "空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\{3em}  \n",
         "\\{\\}+\\backslash\\backslashで対応することもできる。\\\\\n",
         "{}\\\\\n",
-        "とか。"
+        "とか。\n",
+        "&nbsp;\n",
+        "とか"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "latex の中での改行は\\backslash を行末に2個入れる。\\\\[1em]\n空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\\n\\{\\}+\\backslash\\backslashで対応することもできる。\\\\\n{}\\\\\nとか。",
+            "text/latex": "latex の中での改行は\\backslash を行末に2個入れる。\\\\[1em]\n空白行は\\backslash\\backslashのあとに[\\text{1em}]とか書く。\\\\{3em}\n\\{\\}+\\backslash\\backslashで対応することもできる。\\\\\n{}\\\\\nとか。\n&nbsp;\nとか",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -675,7 +760,7 @@
         "\\mathit {abcdefABCDEF}\\\\\n",
         "\\mathrm{\\text{this is a pen.}}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
